--- a/Atividades em Sala/Vendas01/.project
+++ b/Atividades em Sala/Vendas01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LinguagensDeProgramacao_lll</name>
+	<name>Venda01</name>
 	<comment></comment>
 	<projects>
 	</projects>
